--- a/portfolio.html
+++ b/portfolio.html
@@ -130,56 +130,60 @@
     </main>
     <!--WebStudio Footer-->
     <footer class="footer">
-        <div class="container container-footer">
-        <div class="footer-name">
-        <a class="footer-company-name1" href="/">Web<span class="footer-company-name2">Studio</span></a>
-        </div>
-        <address class="location">
-            <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
-            <a class="footer-contacts footer-email" href="mailto:info@example.com">info@example.com</a><br>
-            <a class="footer-contacts footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
-        </address>
-        <div class="container-soc-footer">
-        <h3 class="footer-title">Присоединяйтесь</h3>
-        <ul class="footer-soc-list">
-            <li class="footer-soc-item">
-                <a class="footer-soc-link" href="">
-                    <svg class="footer-soc-icon" width="20" height="20">
-                        <use 
-                            href="./images/symbol-defs.svg#icon-instagram">
-                        </use>
-                    </svg>
-                </a>
-            </li>
-            <li class="footer-soc-item">
-                <a class="footer-soc-link" href="">
-                    <svg class="footer-soc-icon" width="20" height="20">
-                        <use 
-                            href="./images/symbol-defs.svg#icon-twitter">
-                        </use>
-                    </svg>
-                </a>
-            </li>
-            <li class="footer-soc-item">
-                <a class="footer-soc-link" href="">
-                    <svg class="footer-soc-icon" width="20" height="20">
-                        <use 
-                            href="./images/symbol-defs.svg#icon-facebook">
-                        </use>
-                    </svg>
-                </a>
-            </li>
-            <li class="footer-soc-item">
-                <a class="footer-soc-link" href="">
-                    <svg class="footer-soc-icon" width="20" height="20">
-                        <use 
-                            href="./images/symbol-defs.svg#icon-linkedin">
-                        </use>
-                    </svg>
-                </a>
-            </li>
-        </ul>
-        </div>
+        <div class="container footer-flex">
+            <div class="footer-address-container">
+                <div class="footer-name">
+                    <a class="footer-company-name1" href="/">Web<span class="footer-company-name2">Studio</span></a>
+                </div>
+                <address class="location">
+                    <ul class="location-list">
+                        <li class="footer-address"><p>г. Киев, пр-т Леси Украинки, 26</p></li>
+                        <li class="location-item"><a class="footer-contacts footer-email" href="mailto:info@example.com">info@example.com</a><br></li>
+                        <li class="location-item"><a class="footer-contacts footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="container-soc-footer">
+                <h3 class="footer-title">Присоединяйтесь</h3>
+                <ul class="footer-soc-list">
+                    <li class="footer-soc-item">
+                        <a class="footer-soc-link" href="">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use 
+                                    href="./images/symbol-defs.svg#icon-instagram">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-item">
+                        <a class="footer-soc-link" href="">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use 
+                                    href="./images/symbol-defs.svg#icon-twitter">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-item">
+                        <a class="footer-soc-link" href="">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use 
+                                    href="./images/symbol-defs.svg#icon-facebook">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-item">
+                        <a class="footer-soc-link" href="">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use 
+                                    href="./images/symbol-defs.svg#icon-linkedin">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
