--- a/portfolio.html
+++ b/portfolio.html
@@ -26,23 +26,21 @@
         </nav>
             <ul class="header-contact-list">
                 <li class="header-contact-item">
-                    <a class="header-contacts header-gmail header-contacts-container" href="mailto:info@devstudio.com">
-                        <svg class="header-contact-logo header-contacts-container" width="16" height="12">
-                            <use
+                    <a class="header-contacts header-gmail" href="mailto:info@devstudio.com">
+                        <svg class="header-contact-logo header-contacts" width="16" height="12">
+                            <use 
                                 href="./images/symbol-defs.svg#icon-envelope">
                             </use>
-                        </svg>
-                        info@devstudio.com
+                        </svg>info@devstudio.com
                     </a>
                 </li>
                 <li class="header-contact-item">                   
-                    <a class="header-contacts header-tel header-contacts-container" href="tel:+380961111111">
-                        <svg class="header-contact-logo header-contacts-container" width="10" height="16">
+                    <a class="header-contacts header-tel" href="tel:+380961111111">
+                        <svg class="header-contact-logo header-contacts" width="10" height="16">
                             <use
                                 href="./images/symbol-defs.svg#icon-smartphone">
                             </use>
-                        </svg>
-                        +38 096 111 11 11
+                        </svg>+38 096 111 11 11
                     </a>
                 </li>
             </ul>
