--- a/portfolio.html
+++ b/portfolio.html
@@ -60,63 +60,63 @@
         <!--Gallery-->
             <ul class="site-list">
                 <li class="galleries">
-                    <a class="gallery-image" href="/" target="_blank"><img src="./images/techcrack.jpg" width="370" height="294" alt="Фото пользователя">
+                    <a class="gallery-image" href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.thefactsite.com%2Fwp-content%2Fuploads%2F2012%2F05%2Fshrek-facts.jpg&imgrefurl=https%3A%2F%2Fwww.thefactsite.com%2Fogre-called-shrek%2F&tbnid=9A4tzBF83bgUBM&vet=12ahUKEwjuwJzgz4_4AhUFpBoKHfH6DwwQMygIegUIARDpAQ..i&docid=Hbj9TnIpGUiKlM&w=642&h=350&q=shrek&ved=2ahUKEwjuwJzgz4_4AhUFpBoKHfH6DwwQMygIegUIARDpAQ" target="_blank"><img src="./images/techcrack.jpg" width="370" height="294" alt="Фото пользователя">
                     <div class="project-info">
                         <h2 class="gallery-title">Технокряк</h2>
                         <p class="gallery-paragraph">Веб-сайт</p></a>
                     </div>    
                 </li>
                 <li class="galleries">
-                    <a class="gallery-image" href="/" target="_blank"><img src="images/poster.jpg" width="370" height="294" alt="Фото пользователя">
+                    <a class="gallery-image" href="" target="_blank"><img src="images/poster.jpg" width="370" height="294" alt="Фото пользователя">
                     <div class="project-info">
                         <h2 class="gallery-title">Постер New Orlean vs Golden Star</h2>
                         <p class="gallery-paragraph">Дизайн</p></a>
                     </div>
                 </li>
                 <li class="galleries">
-                    <a class="gallery-image" href="/" target="_blank"><img src="images/seafood.jpg" width="370" height="294" alt="Фото пользователя">
+                    <a class="gallery-image" href="" target="_blank"><img src="images/seafood.jpg" width="370" height="294" alt="Фото пользователя">
                     <div class="project-info">
                         <h2 class="gallery-title">Ресторан Seafood</h2>
                         <p class="gallery-paragraph">Приложение</p></a>
                     </div>
                 </li>
                 <li class="galleries">
-                    <a class="gallery-image" href="/" target="_blank"><img src="images/headphones.jpg" width="370" height="294" alt="Фото пользователя">
+                    <a class="gallery-image" href="" target="_blank"><img src="images/headphones.jpg" width="370" height="294" alt="Фото пользователя">
                     <div class="project-info">
                         <h2 class="gallery-title">Проект Prime</h2>
                         <p class="gallery-paragraph">Макретинг</p></a>
                     </div>
                 </li>
                 <li class="galleries">
-                    <a class="gallery-image" href="/" target="_blank"><img src="images/boxes.jpg" width="370" height="294" alt="Фото пользователя">
+                    <a class="gallery-image" href="" target="_blank"><img src="images/boxes.jpg" width="370" height="294" alt="Фото пользователя">
                     <div class="project-info">
                         <h2 class="gallery-title">Проект Boxes</h2>
                         <p class="gallery-paragraph">Приложение</p></a>
                     </div>
                 </li>
                 <li class="galleries">
-                    <a class="gallery-image" href="/" target="_blank"><img src="images/inspiration.jpg" width="370" height="294" alt="Фото пользователя">
+                    <a class="gallery-image" href="" target="_blank"><img src="images/inspiration.jpg" width="370" height="294" alt="Фото пользователя">
                     <div class="project-info">
                         <h2 class="gallery-title">Inspiration has no Borders</h2>
                         <p class="gallery-paragraph">Веб-сайт</p></a>
                     </div>
                 </li>
                 <li class="galleries">
-                    <a class="gallery-image" href="/" target="_blank"><img src="images/limited-edition.jpg" width="370" height="294" alt="Фото пользователя">
+                    <a class="gallery-image" href="" target="_blank"><img src="images/limited-edition.jpg" width="370" height="294" alt="Фото пользователя">
                     <div class="project-info">
                         <h2 class="gallery-title">Издание Limited Edition</h2>
                         <p class="gallery-paragraph">Дизайн</p></a>
                     </div>
                 </li>
                 <li class="galleries">
-                    <a class="gallery-image" href="/" target="_blank"><img src="images/lab.jpg" width="370" height="294" alt="Фото пользователя">
+                    <a class="gallery-image" href="" target="_blank"><img src="images/lab.jpg" width="370" height="294" alt="Фото пользователя">
                     <div class="project-info">
                         <h2 class="gallery-title">Проект LAB</h2>
                         <p class="gallery-paragraph">Макретинг</p></a>
                     </div>
                 </li>
                 <li class="galleries">
-                    <a class="gallery-image" href="/" target="_blank"><img src="images/growing-business.jpg" width="370" height="294" alt="Фото пользователя">
+                    <a class="gallery-image" href="" target="_blank"><img src="images/growing-business.jpg" width="370" height="294" alt="Фото пользователя">
                     <div class="project-info">
                         <h2 class="gallery-title">Growing Business</h2>
                         <p class="gallery-paragraph">Приложение</p></a>
@@ -184,5 +184,6 @@
             </div>
         </div>
     </footer>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
